# Echo

./: .gitignore  CMakeLists.txt  README.md
src/: connection.cpp  discovery.cpp  main.cpp  metadata.cpp  metadata.h  state.cpp  state.h  transfer.cpp  transfer.h  transfer.hpp  ui.cpp  watcher.cpp  watcher.h
src/include/: connection.hpp  discovery.hpp  metadata.hpp  state.hpp  ui.hpp  watcher.hpp
